--- a/static/style.css
+++ b/static/style.css
@@ -10,7 +10,7 @@ body {
   font-family: "Lato";
   line-height: 1.5em;
   font-size: 1.2em;
-  background: rgb(198, 198, 198);
+  /*background: rgb(198, 198, 198);*/
   color: rgb(49, 49, 49);
   height: 100%;
   background-size: 100%;
